# cs5242-project

./: .env.example  .gitignore  CS5242_Report.ipynb  README.md  eda_etl.ipynb  pyproject.toml  report.ipynb
main/: CS5242_Project.ipynb  app_metadata.json  eda.ipynb  finetune_tisasrec_m_transfer.py  main.py  mobilerec_eda_etl.ipynb  model.py  prepare_recommend.ipynb  recommend.py  train_model.py  utils.py
main/experiments/: experiment_summary.csv  experiment_summary.md  report.ipynb
main/experiments/sasrec_pn_mobilerec_100/: full_test_metrics_mobilerec.json  history.csv  metrics.json
main/experiments/sasrec_tap_mobilerec_100/: full_test_metrics.json  history.csv  metrics.json
main/experiments/tisasrec_m_ft_steamrec_10/: history.csv  metrics.json  transfer_load_report.json
main/experiments/tisasrec_m_ft_steamrec_60/: full_test_metrics.json  history.csv  metrics.json  transfer_load_report.json
main/experiments/tisasrec_m_pn_mobilerec_100/: full_test_metrics.json  history.csv  metrics.json
main/experiments/tisasrec_m_pn_mobilerec_15/: history.csv
main/experiments/tisasrec_m_pn_steamrec_100/: full_test_metrics.json  history_steamrec.csv  metrics.json
main/experiments/tisasrec_m_pn_steamrec_15/: history_steamrec.csv  metrics.json
main/metadata/: app_categories.json  app_categories.parquet  app_item_id_map.parquet  app_metadata.json  game_categories.json  game_categories.parquet  game_item_id_map.parquet  game_metadata.json  game_metadata.parquet
main/models/: __init__.py  sasrec.py  tisasrec.py  upload_processed_to_kaggle.py
models/: prepare_mobilerec.py  tisasrec.py  train_sasrec.py
steam-crawler/: .env.example  .gitignore  PLAN.md  PROJECT_INSTRUCTIONS.md  README.md  SteamAPI.postman_collection.json  progress_monitor.py  pyproject.toml  requirements.txt  run_notebook.py  sbatch.sh
steam-crawler/notebooks/: eda.ipynb  eda_etl.ipynb  progress_monitor.ipynb  steam_crawler.ipynb
steam-crawler/src/steam_crawler/: __init__.py  config.py  http_client.py  logging_utils.py  pipeline.py  stage4a.py  stage5a.py  transforms.py
steam-crawler/tests/: test_http_client.py  test_logging_utils.py  test_pipeline.py  test_stage4a.py  test_transforms.py
