[project]
name = "cs5242-project"
version = "0.1.0"
description = "MobileRec data preparation and SASRec baseline training for CS5242."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "duckdb>=1.3.2",
  "huggingface-hub>=0.32.0",
  "ipykernel>=6.29.0",
  "numpy>=2.2.0",
  "pandas>=2.3.0",
  "pyarrow>=21.0.0",
  "pyyaml>=6.0.2",
  "torch==2.9.1+cu129",
  "torchaudio==2.11.0+cu129",
  "torchvision==0.24.1+cu129",
  "tqdm>=4.67.0",
]

[project.scripts]
prepare-mobilerec = "models.prepare_mobilerec:main"
train-sasrec = "models.train_sasrec:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
torchaudio = [{ index = "pytorch-cu129" }]
